--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body {
 .header h1 .seo {
     color: #d9dcd6;
 }
-
+/*replaced div element to a nav semantic element*/
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -31,11 +31,11 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
+/*replaced div element to a nav semantic element*/
 .header nav ul {
     list-style-type: none;
 }
-
+/*replaced div element to a nav semantic element*/
 .header nav ul li {
     display: inline-block;
     margin-left: 25px;
@@ -85,23 +85,23 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/* cleaned up css by bunching 3 atributes into one curly bracket*/
 .benefit-lead,  .benefit-brand,  .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
+/* cleaned up css by bunching 3 atributes into one curly bracket*/
 .benefit-lead h3,  .benefit-brand h3,  .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
+/* cleaned up css by bunching 3 atributes into one curly bracket*/
 .benefit-lead img,  .benefit-brand img,  .benefit-cost img  {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* cleaned up css by bunching 3 atributes into one curly bracket*/
 .search-engine-optimization,  .online-reputation-management,  .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -110,11 +110,11 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/* cleaned up css by bunching 3 atributes into one curly bracket*/
 .search-engine-optimization img,  .online-reputation-management img,  .social-media-marketing img {
     max-height: 200px;
 }
-
+/* cleaned up css by bunching 3 atributes into one curly bracket*/
 .search-engine-optimization h2,  .online-reputation-management h2,  .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
